src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-binary-7.snap
---
source: src/lexer/lexer.rs
description: 0b111
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b111",
        ),
        start: 0,
        end: 5,
    },
]
