src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-14.snap
---
source: src/lexer/lexer.rs
description: "0xe"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xe",
        ),
        start: 0,
        end: 3,
    },
]
