src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-15.snap
---
source: src/lexer/lexer.rs
description: "0xf"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xf",
        ),
        start: 0,
        end: 3,
    },
]
