src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-16.snap
---
source: src/lexer/lexer.rs
description: "0xA"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xA",
        ),
        start: 0,
        end: 3,
    },
]
