src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-17.snap
---
source: src/lexer/lexer.rs
description: "0xB"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xB",
        ),
        start: 0,
        end: 3,
    },
]
