src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-2.snap
---
source: src/lexer/lexer.rs
description: "0x2"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x2",
        ),
        start: 0,
        end: 3,
    },
]
